# ARM-Obfuscator

./: .gitignore  CMakeLists.ARMOB-Armob.files.txt  CMakeLists.ARMOB-Asm.files.txt  CMakeLists.ARMOB-Elf.files.txt  CMakeLists.ARMOB-Tools.files.txt  CMakeLists.txt  README.md  armob.code-workspace  gen_files_lists.sh
src/: main.cpp  main_elf_inspector.cpp  main_mutate.cpp
src/armob/: DiscoveredDetails.cpp  DiscoveredDetails.h  DiscoveredSymbols.cpp  DiscoveredSymbols.h  Symbol.cpp  Symbol.h  WorkContext.cpp  WorkContext.h  config.h.in
src/armob/helper/: Builder.cpp  Builder.h  Disassembler.cpp  Disassembler.h  Discoverer.cpp  Discoverer.h  InstructionFactory.cpp  InstructionFactory.h  SymbolBuilder.cpp  SymbolBuilder.h  SymbolDiscoverer.cpp  SymbolDiscoverer.h
src/asm/: GenericDetail.cpp  GenericDetail.h  GenericDetailFactory.cpp  GenericDetailFactory.h  GenericInstruction.cpp  GenericInstruction.h  InstructionFactory.cpp  InstructionFactory.h  Item.cpp  Item.h  ItemList.cpp  ItemList.h
src/asm/arm/arm64/: DecodedInstruction.cpp  DecodedInstruction.h  Decoder.cpp  Decoder.h
src/asm/arm/arm64/catalog/: InstructionCatalog.cpp  InstructionCatalog.h
src/asm/arm/arm64/spec/: Encoding.cpp  Encoding.h  EncodingBook.cpp  EncodingBook.h  Field.cpp  Field.h  FieldBook.cpp  FieldBook.h  Instruction.cpp  Instruction.h  Operand.cpp  Operand.h  OperandBook.cpp  OperandBook.h  OperandFactory.cpp  OperandFactory.h  auto_class_enums.h.in  auto_dec_tree.c.in  auto_encoding_enums.h.in  auto_encoding_mnemomic.h.in  auto_encoding_names.h.in  auto_encodings.h.in  auto_field_enums.h.in  auto_field_names.h.in  auto_instruction_enums.h.in  auto_operand_enums.h.in  auto_operand_specs.h.in  enums.h
src/asm/arm/arm64/spec/impl/: DefaultOperand.cpp  DefaultOperand.h  DefaultSignedOperand.cpp  DefaultSignedOperand.h  MemoryReferenceOperand.cpp  MemoryReferenceOperand.h  PatternOperand.cpp  PatternOperand.h  RegisterOperand.cpp  RegisterOperand.h
src/doc/: scratch.cpp
src/elf/: Artefact.cpp  Artefact.h  ArtefactCopy.cpp  ArtefactCopy.h  ArtefactFromFile.cpp  ArtefactFromFile.h  Content.cpp  Content.h  ContentFile.cpp  ContentFile.h  ContentMemory.cpp  ContentMemory.h  Expander.cpp  Expander.h  Identification.cpp  Identification.h  Image.cpp  Image.h  Printer.cpp  Printer.h  SectionBook.cpp  SectionBook.h  Specification.cpp  Specification.h  elf.h
src/elf/elf32/: Header.cpp  Header.h  Printer.cpp  Printer.h  Section.cpp  Section.h  Segment.cpp  Segment.h  Specification.h  Structures.h  Symbol.cpp  Symbol.h  SymbolTable.cpp  SymbolTable.h  elf32.h  elf32printer.h
src/elf/elf64/: Specification.h  Structures.h  elf64.h  elf64printer.h
src/elf/impl/: Component.cpp  Component.h
src/elf/template/: Dynamic.h  DynamicInfo.h  GotInfo.h  Header.h  Printer.h  Relocation.h  RelocationInfo.h  Section.h  Segment.h  Symbol.h  SymbolTable.h
src/elf/utils/: Converter.cpp  Converter.h  Helper.cpp  Helper.h
src/tools/: Exception.cpp  Exception.h  ValueMap.cpp  ValueMap.h  common.cpp  common.h
